--- a/index.html
+++ b/index.html
@@ -36,5 +36,6 @@
   <script src="scripts/docsify@4.js"></script>
 <!--  <script src="scripts/docsify.min.js"></script>-->
   <script src="scripts/search.min.js"></script>
+  <script src="scripts/docsify-copy-code.min.js"></script>
 </body>
 </html>
