--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
         depth: 6,                       // 搜索标题的最大层级, 1 - 6
         hideOtherSidebarContent: false, // 是否隐藏其他侧边栏内容
       },
+      count: {
+        countable: true,
+        fontsize:  '0.9em',
+        color:     'rgb(90,90,90)',
+        language:  'chinese',
+      },
     }
   </script>
   <script>
@@ -37,5 +43,6 @@
 <!--  <script src="scripts/docsify.min.js"></script>-->
   <script src="scripts/search.min.js"></script>
   <script src="scripts/docsify-copy-code.min.js"></script>
+  <script src="scripts/countable.js"></script>
 </body>
 </html>
